[package]
name = "borgify"
version = "0.1.3"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2021"
description = "An opinionated wrapper to run Borg backup"
repository = "https://gitlab.com/Hawk777/borgify"
license = "GPL-3.0-only"

[dependencies.chrono]
default-features = false
features = ["clock"]
version = "^0.4.23"

[dependencies.hmac-sha256]
version = "^1.1.6"

[dependencies.nix]
default-features = false
features = ["ioctl"]
version = "^0.26.1"

[dependencies.os_pipe]
features = ["io_safety"]
version = "^1.1.2"

[dependencies.serde]
features = ["derive"]
version = "^1.0.152"

[dependencies.serde_json]
version = "^1.0.91"
